--- a/openstack-keystonev2.html.md.erb
+++ b/openstack-keystonev2.html.md.erb
@@ -28,6 +28,6 @@ title: Using Keystone API v2
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
-Next: [Extended Registry configuration](openstack-registry.html)
+Next: [Using nova-networking](openstack-nova-networking.html)
 
 Previous: [OpenStack](openstack-cpi.html)
