--- a/openstack-registry.html.md.erb
+++ b/openstack-registry.html.md.erb
@@ -28,4 +28,4 @@ title: Extended Registry configuration
 
 Next: [Using human-readable VM names](openstack-human-readable-vm-names.html)
 
-Previous: [Using Keystone API v2](openstack-keystonev2.html)
+Previous: [Using nova-networking](openstack-nova-networking.html)
