--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -95,6 +95,7 @@ See [Recent Additions and Updates](recent.html).
     * [Creating resources](azure-resources.html)
 * [OpenStack](openstack-cpi.html)
     * [Using Keystone v2 API](openstack-keystonev2.html)
+    * [Using nova-networking](openstack-nova-networking.html)
     * [Extended Registry configuration](openstack-registry.html)
     * [Human-readable VM names](openstack-human-readable-vm-names.html)
     * [Validating self-signed OpenStack endpoints](openstack-self-signed-endpoints.html)
