URLs in releases block also works in regular bosh

--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -50,7 +50,7 @@ releases:
 - {name: redis, version: 12}
 ```
 
-### <a id='bosh-init-releases'></a> Custom bosh-init Releases Block
+### <a id='bosh-init-releases'></a>Releases Block using URLs
 
 **releases** [Array, required]: The name, url and possibly SHA1 of each release in the deployment.
 
