Add light stemcell documentation for OpenStack

--- a/openstack-multiple-networks.html.md.erb
+++ b/openstack-multiple-networks.html.md.erb
@@ -29,4 +29,6 @@ Setting the MTU for network devices is currently not possible in the deployment 
 ---
 [Back to Table of Contents](index.html#cpi-config)
 
+Next: [Using Light Stemcells](openstack-light-stemcells.html)
+
 Previous: [Validating self-signed OpenStack endpoints](openstack-self-signed-endpoints.html)
