--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -99,6 +99,7 @@ See [Recent Additions and Updates](recent.html).
     * [Human-readable VM names](openstack-human-readable-vm-names.html)
     * [Validating self-signed OpenStack endpoints](openstack-self-signed-endpoints.html)
     * [Multi-homed VMs](openstack-multiple-networks.html)
+    * [Using Light Stemcells](openstack-light-stemcells.html)
 * [vSphere](vsphere-cpi.html)
     * [vSphere HA](vsphere-ha.html)
     * [Migrating from one datastore to another](vsphere-migrate-datastores.html)
