Specifically call out --help for ssh command
It took me a long time to discover the new ways to specify gateway host and user, etc.

If you are going to start supporting `--help` for most commands, trash this PR. If you're not going to get there soon, this little addition could help save folks some time. I discovered the `--help` option by reading the source code for the ssh command.

--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -70,7 +70,7 @@ title: CLI v2 vs v1
   - sane arguments syntax (`-r` for recent and `-a` for all)
 
 - `bosh ssh`
-  - sane arguments syntax
+  - sane arguments syntax, use `ssh --help` for more info
   - support for running commands against multiple machines
   - adds `--ssh-opts` flag to pass through options to ssh command for port forwarding etc.
   - adds `-r` flag to collate results from multiple machines
