--- a/director-api-v1.html.md.erb
+++ b/director-api-v1.html.md.erb
@@ -98,7 +98,7 @@ $ curl -s -k https://192.168.50.4:25555/info | jq .
 **[root]** [Array]: List of tasks.
 
 - **id** [Integer]: Numeric ID of the task.
-- **state** [String]: Current state of the task. Possible values are: `queued`, `processing`, `cancelled`, `cancelling`, `done`, `error`.
+- **state** [String]: Current state of the task. Possible values are: `queued`, `processing`, `cancelled`, `cancelling`, `done`, `error`, `timeout`.
 - **description** [String]: Description of the task's purpose.
 - **timestamp** [Integer]: todo.
 - **result** [String or null]: Description of the task's result. Will not be populated (string) unless tasks finishes.
