--- a/links.html.md.erb
+++ b/links.html.md.erb
@@ -69,7 +69,7 @@ consumes:
   type: conn
 ```
 
-And then in the deployment manifest, we disambuate the links with `provides` and `consumes` declarations on the jobs. The database jobs name their `database_conn` links. The application job uses these names to specify which database it will use for each of its links.
+And then in the deployment manifest, we disambiguate the links with `provides` and `consumes` declarations on the jobs. The database jobs name their `database_conn` links. The application job uses these names to specify which database it will use for each of its links.
 
 ```yaml
 # ...
