Need to run bosh-init deploy with sudo

--- a/init-softlayer.html.md.erb
+++ b/init-softlayer.html.md.erb
@@ -190,7 +190,7 @@ VLANs provide the ability to partition devices and subnets on the network. To or
 
 1. Install [bosh-init](./install-bosh-init.html).
 
-1. Run `bosh-init deploy ./bosh.yml` to start the deployment process.
+1. Run `bosh-init deploy ./bosh.yml` with sudo to start the deployment process.
 
     <pre class='terminal'>
     $ bosh-init deploy ./bosh.yml
