Add cross-links for Softlayer CPI
Signed-off-by: Peter Goetz <peter.gtz@gmail.com>

--- a/azs.html.md.erb
+++ b/azs.html.md.erb
@@ -39,6 +39,7 @@ AZs schema:
 
 - [See AWS CPI AZ cloud properties](aws-cpi.html#azs)
 - [See OpenStack CPI AZ cloud properties](openstack-cpi.html#azs)
+- [See Softlayer CPI AZ cloud properties](softlayer-cpi.html#azs)
 - [See vSphere CPI AZ cloud properties](vsphere-cpi.html#azs)
 - [See vCloud CPI AZ cloud properties](vcloud-cpi.html#azs)
 
