--- a/deployment-manifest.html.md.erb
+++ b/deployment-manifest.html.md.erb
@@ -81,6 +81,7 @@ See [networks](networks.html) for more details.
 - [See AWS CPI network cloud properties](aws-cpi.html#networks)
 - [See Azure CPI network cloud properties](azure-cpi.html#networks)
 - [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
+- [See Softlayer CPI network cloud properties](softlayer-cpi.html#networks)
 - [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
 - [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
 
@@ -138,6 +139,7 @@ resource_pools:
 - [See AWS CPI resource pool cloud properties](aws-cpi.html#resource-pools)
 - [See Azure CPI resource pool cloud properties](azure-cpi.html#resource-pools)
 - [See OpenStack CPI resource pool cloud properties](openstack-cpi.html#resource-pools)
+- [See Softlayer CPI resource pool cloud properties](softlayer-cpi.html#resource-pools)
 - [See vSphere CPI resource pool cloud properties](vsphere-cpi.html#resource-pools)
 - [See vCloud CPI resource pool cloud properties](vcloud-cpi.html#resource-pools)
 
@@ -165,6 +167,7 @@ disk_pools:
 - [See AWS CPI disk pool cloud properties](aws-cpi.html#disk-pools)
 - [See Azure CPI disk pool cloud properties](azure-cpi.html#disk-pools)
 - [See OpenStack CPI disk pool cloud properties](openstack-cpi.html#disk-pools)
+- [See Softlayer CPI disk pool cloud properties](softlayer-cpi.html#disk-pools)
 - [See vSphere CPI disk pool cloud properties](vsphere-cpi.html#disk-pools)
 - [See vCloud CPI disk pool cloud properties](vcloud-cpi.html#disk-pools)
 
