--- a/cloud-config.html.md.erb
+++ b/cloud-config.html.md.erb
@@ -101,6 +101,7 @@ compilation:
 - [See AWS CPI example](aws-cpi.html#cloud-config)
 - [See Azure CPI example](azure-cpi.html#cloud-config)
 - [See OpenStack CPI example](openstack-cpi.html#cloud-config)
+- [See Softlayer CPI example](softlayer-cpi.html#cloud-config)
 - [See vSphere CPI example](vsphere-cpi.html#cloud-config)
 
 ---
@@ -128,6 +129,7 @@ azs:
 - [See AWS CPI AZ cloud properties](aws-cpi.html#azs)
 - [See Azure CPI AZ cloud properties](azure-cpi.html#azs)
 - [See OpenStack CPI AZ cloud properties](openstack-cpi.html#azs)
+- [See Softlayer CPI AZ cloud properties](softlayer-cpi.html#azs)
 - [See vSphere CPI AZ cloud properties](vsphere-cpi.html#azs)
 - [See vCloud CPI AZ cloud properties](vcloud-cpi.html#azs)
 
@@ -143,6 +145,7 @@ See [networks](networks.html) for more details.
 - [See AWS CPI network cloud properties](aws-cpi.html#networks)
 - [See Azure CPI network cloud properties](azure-cpi.html#networks)
 - [See OpenStack CPI network cloud properties](openstack-cpi.html#networks)
+- [See Softlayer CPI network cloud properties](softlayer-cpi.html#networks)
 - [See vSphere CPI network cloud properties](vsphere-cpi.html#networks)
 - [See vCloud CPI network cloud properties](vcloud-cpi.html#networks)
 
@@ -167,6 +170,7 @@ vm_types:
 - [See AWS CPI VM types cloud properties](aws-cpi.html#resource-pools)
 - [See Azure CPI VM types cloud properties](azure-cpi.html#resource-pools)
 - [See OpenStack CPI VM types cloud properties](openstack-cpi.html#resource-pools)
+- [See Softlayer CPI VM types cloud properties](softlayer-cpi.html#resource-pools)
 - [See vSphere CPI VM types cloud properties](vsphere-cpi.html#resource-pools)
 - [See vCloud CPI VM types cloud properties](vcloud-cpi.html#resource-pools)
 
@@ -214,6 +218,7 @@ disk_types:
 - [See AWS CPI disk type cloud properties](aws-cpi.html#disk-pools)
 - [See Azure CPI disk type cloud properties](azure-cpi.html#disk-pools)
 - [See OpenStack CPI disk type cloud properties](openstack-cpi.html#disk-pools)
+- [See Softlayer CPI disk type cloud properties](softlayer-cpi.html#disk-pools)
 - [See vSphere CPI disk type cloud properties](vsphere-cpi.html#disk-pools)
 - [See vCloud CPI disk type cloud properties](vcloud-cpi.html#disk-pools)
 
