runtime config include stemcell property takes an array not a hash

--- a/runtime-config.html.md.erb
+++ b/runtime-config.html.md.erb
@@ -112,7 +112,7 @@ include:
   - name: redis
     release: redis-release
   stemcell:
-    os: ubuntu-trusty
+    - os: ubuntu-trusty
 ```
 
 See [common addons list](addons-common.html) for several examples.
