start documenting cli v2

--- a/index.html.md.erb
+++ b/index.html.md.erb
@@ -148,9 +148,11 @@ See [Recent Additions and Updates](recent.html).
 * What is a package?
     * [Creating a package](packages.html)
     * Relationship to release blobs
+    * [Release blobs](release-blobs.html)
 * How do releases, jobs, and packages interact?
 * Managing release repository
-    * [Configuring S3 release blobstore](s3-release-blobstore.html)
+    * [Release blobstore](release-blobstore.html)
+        * [Configuring S3 release blobstore](s3-release-blobstore.html)
 
 ---
 ## <a id="extend"></a> Extending BOSH
