Add VPN access link

--- a/init-softlayer.html.md.erb
+++ b/init-softlayer.html.md.erb
@@ -175,7 +175,7 @@ API keys are used to securely access the SoftLayer API. Follow [Generate an API 
 ---
 ### <a id="vpn"></a> Access SoftLayer VPN
 
-To access SoftLayer Private network, you need to access SoftLayer VPN. You can get your VPN password from your [user profile](https://control.softlayer.com/account/user/profile). Follow [VPN Access](http://www.softlayer.com/vpn-access) to access the VPN.
+To access SoftLayer Private network, you need to access SoftLayer VPN. Follow [VPN Access](http://www.softlayer.com/vpn-access) to access the VPN. You can get your VPN password from your [user profile](https://control.softlayer.com/account/user/profile). Follow [VPN Access](http://www.softlayer.com/vpn-access) to access the VPN.
 
 ---
 ### <a id="vlan"></a> Order VLANs
