--- a/azure-resources.html.md.erb
+++ b/azure-resources.html.md.erb
@@ -158,6 +158,33 @@ $ azure network nsg rule create --resource-group bosh-res-group --nsg-name nsg-c
 </pre>
 
 ---
+## <a id="public-ips"></a> Public IPs
+
+To make certain VMs publicly accessible, you will need to create a Public IP:
+
+<pre class="terminal extra-wide">
+$ azure network public-ip create --name my-public-ip --allocation-method Static --resource-group bosh-res-group --location "Central US"
+
+$ azure network public-ip show --name my-public-ip --resource-group bosh-res-group
+info:    Executing command network public-ip show
++ Looking up the public ip "my-public-ip"
+data:    Id                              : /subscriptions/3c39a033-c306-4615-a4cb-260418d63879/resourceGroups/bosh-res-group/providers/Microsoft.Network/publicIPAddresses/my-public-ip
+data:    Name                            : my-public-ip
+data:    Type                            : Microsoft.Network/publicIPAddresses
+data:    Location                        : eastasia
+data:    Provisioning state              : Succeeded
+data:    Allocation method               : Static
+data:    Idle timeout                    : 4
+data:    IP Address                      : 23.99.103.110
+info:    network public-ip show command OK
+</pre>
+
+<p class="note">
+Note:
+You can skip below section if you are using managed disks with Azure CPI v21+
+</p>
+
+---
 ## <a id="storage-account"></a> Storage Account
 
 Create a default storage account to hold root disks, persistent disks, stemcells, etc.
@@ -239,26 +266,4 @@ data:    Name
 data:    ---------
 data:    stemcells
 info:    storage table list command OK
-</pre>
-
----
-## <a id="public-ips"></a> Public IPs
-
-To make certain VMs publicly accessible, you will need to create a Public IP:
-
-<pre class="terminal extra-wide">
-$ azure network public-ip create --name my-public-ip --allocation-method Static --resource-group bosh-res-group --location "Central US"
-
-$ azure network public-ip show --name my-public-ip --resource-group bosh-res-group
-info:    Executing command network public-ip show
-+ Looking up the public ip "my-public-ip"
-data:    Id                              : /subscriptions/3c39a033-c306-4615-a4cb-260418d63879/resourceGroups/bosh-res-group/providers/Microsoft.Network/publicIPAddresses/my-public-ip
-data:    Name                            : my-public-ip
-data:    Type                            : Microsoft.Network/publicIPAddresses
-data:    Location                        : eastasia
-data:    Provisioning state              : Succeeded
-data:    Allocation method               : Static
-data:    Idle timeout                    : 4
-data:    IP Address                      : 23.99.103.110
-info:    network public-ip show command OK
 </pre>
