--- a/init-azure.html.md.erb
+++ b/init-azure.html.md.erb
@@ -20,7 +20,7 @@ We strongly recommend you to use Azure template [bosh-setup](https://azure.micro
 
 1. Create a deployment manifest file named `bosh.yml` in the deployment directory based on the template below.
 
-    In the template, you must fill in relevant properties to your Azure accout. We describe replacing them below.
+    In the template, you must fill in the relevant properties of your Azure account. We describe replacing these properties in the section [Prepare an Azure Environment](#prepare).
 
     <p class="note"><strong>Note</strong>: The example below uses several predefined passwords. We strongly recommend replacing them with uniquely generated passwords.</p>
 
@@ -149,6 +149,7 @@ jobs:
       default_security_group: DEFAULT-SECURITY-GROUP # <--- Replace
       ssh_user: vcap
       ssh_public_key: SSH-PUBLIC-KEY # <--- Replace
+      use_managed_disks: USE-MANAGED-DISKS # <--- Replace
 
     # agent: {mbus: "nats://nats:nats-password@10.0.0.4:4222"} # <--- Uncomment & change
 
@@ -189,8 +190,6 @@ To prepare your Azure environment find out and/or create any missing resources i
 
 - Replace `STORAGE-ACCOUNT-NAME` (e.g. 'boshstore')
 
-- Replace `STORAGE-ACCESS-KEY` (e.g. '+o9EVnno8ja5OzQim6...fQkVGbvoQmazl+Nlg==')
-
 - Replace `VNET-NAME` (e.g. 'boshnet') with a name of created Virtual Network.
 
 - Replace `SUBNET-NAME` (e.g. 'bosh'). Deployment manifest assumes that the subnet is `10.0.0.0/24` and Director VM will be placed at `10.0.0.4`.
@@ -207,6 +206,28 @@ To prepare your Azure environment find out and/or create any missing resources i
     </pre>
 
     Keep `bosh` next to `bosh.yml` as it will be used by bosh-init during the deploy.
+
+- Replace `USE-MANAGED-DISKS` with `true` or `false`.
+
+    Using managed disks, you don't need to create [the default storage account](azure-resources.html#storage-account).
+
+    The following properties should be changed:
+
+    <pre class="terminal">
+    azure:
+      use_managed_disks: true
+
+    disk_pools:
+      cloud_properties:
+        storage_account_type # New parameter: Standard_LRS or Premium_LRS
+
+    resource_pools:
+      cloud_properties:
+        storage_account_name # Remove it if it exists
+        storage_account_max_disk_number # Remove it if it exists
+        storage_account_type # Remove it if it exists
+    </pre>
+
 
 ---
 ## <a id="deploy"></a> Step 3: Deploy
