CLI `repack-stemcell` command is documented
[#137498577](https://www.pivotaltracker.com/story/show/137498577)

Signed-off-by: Chris Dutra <cdutra@pivotal.io>

--- a/cli-v2.html.md.erb
+++ b/cli-v2.html.md.erb
@@ -94,3 +94,5 @@ title: CLI v2 vs v1
 - `bosh add-blob`
   - requires a path to its release destination
   - no longer uses symlinks to manage blobs but rather places file directly into `blobs/`
+
+CLI v2 has features not available in v1, for example, CLI v2 can be used to [repack stemcells](repack-stemcell.html)
