--- a/init-openstack.html.md.erb
+++ b/init-openstack.html.md.erb
@@ -167,10 +167,9 @@ cloud_provider:
 ### <a id="prerequisites"></a> Prerequisites
 
 1. An OpenStack environment running one of the following supported releases:
-    * [Juno](http://www.openstack.org/software/juno)
-    * [Kilo](http://www.openstack.org/software/kilo) (actively tested)
     * [Liberty](http://www.openstack.org/software/liberty) (actively tested)
     * [Mitaka](http://www.openstack.org/software/mitaka) (actively tested)
+    * [Newton](http://www.openstack.org/software/newton) (actively tested)
 
     <p class="note">Note: Juno has a <a href="https://bugs.launchpad.net/nova/+bug/1396854">bug</a> that prevents BOSH to assign specific IPs to VMs. You have to apply a Nova patch to avoid this problem.</p>
 
